# Sauron

./: .gitignore  CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  SharedLog.cpp  SharedLog.hpp
src/server/: CMakeLists.txt  main.cpp
